--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ sqlalchemy = "^2.0.25"
 alembic = "^1.13.1"
 pydantic = "^2.6.1"
 pydantic-settings = "^2.1.0"
+psycopg2-binary = "^2.9.9"
 
 
 [tool.poetry.group.dev.dependencies]
