add user management app

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ alembic = "^1.13.1"
 pydantic = "^2.6.1"
 pydantic-settings = "^2.1.0"
 psycopg2-binary = "^2.9.9"
+fastapi = "^0.109.2"
+uvicorn = "^0.27.1"
 
 
 [tool.poetry.group.dev.dependencies]
