--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pytest = "^8.0.0"
 blue = "^0.9.1"
 alembic = "^1.13.1"
 pytest-cov = "^4.1.0"
+mypy = "^1.8.0"
 
 [build-system]
 requires = ["poetry-core"]
