add jupyter  notebook

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,16 +12,20 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    network_mode: host
 
   pgadmin:
     image: dpage/pgadmin4
     container_name: pgadmin4_container
     restart: always
     ports:
-      - "8888:80"
+      - "8889:80"
+    depends_on:
+      - db
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: admin
+    network_mode: host
       
   app:
     image: app
@@ -32,6 +36,7 @@ services:
       - "8000:8000"
     depends_on:
       - db
+    network_mode: host
 
 volumes:
   postgres_data:
