--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ rocketry = {git = "https://github.com/tekumara/rocketry", rev = "pydantic-v2"}
 pydantic-settings = "^2.1.0"
 pydantic = "^2.6.1"
 aiosmtplib = "^3.0.1"
+notebook = "^7.1.0"
+pandas = "^2.2.0"
+pyarrow = "^15.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
